fixtures/runtime/invalid/match-no-arm.php
<?php
// phase4: kind=invalid diagnostic_id=E_PHP_VM_UNHANDLED_MATCH
echo match (2) {
    0 => "zero",
    1 => "one",
};
